--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,16 +8,20 @@ quarkus.datasource.password=123456
 quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/saborescerrado
 %prod.quarkus.hibernate-orm.sql-load-script=import.sql
 
-# Evitar problemas de lazy loading
-quarkus.hibernate-orm.log.sql=false
-quarkus.jackson.fail-on-unknown-properties=false
+# desabilitar o docker 
+quarkus.devservices.enabled=false
 
-# configurando jwt
-mp.jwt.verify.publickey.location=token/publicKey.pem
-mp.jwt.verify.issuer=unitins-jwt
-smallrye.jwt.sign.key.location=token/privateKey.pem
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.bind-parameters=true
 
-# Desabilitado para permitir acesso sem autenticação durante desenvolvimento
-quarkus.security.jaxrs.deny-unannotated-endpoints=false
+# CORS Configuration
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:4200
+quarkus.http.cors.methods=GET,PUT,POST,DELETE,PATCH,OPTIONS
+quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
+quarkus.http.cors.exposed-headers=*
+quarkus.http.cors.access-control-max-age=24H
+quarkus.http.cors.access-control-allow-credentials=true
 
-quarkus.log.category."br.glacks.service".level=DEBUG
+# base url para o type em exception
+%dev.problem.base-url=http://localhost:8080
